--- a/package.json
+++ b/package.json
@@ -15,9 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
+    "connect-mongo": "^3.2.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "flash": "^1.1.0",
+    "mongoose": "^6.7.2",
+    "noty": "^3.2.0-beta-deprecated"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
