--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^3.2.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -25,7 +26,9 @@
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
     "mongoose": "^6.7.2",
-    "noty": "^3.2.0-beta-deprecated"
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
