--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
